01.실습/Chapter07.MSA와 DevOps 그리고 Kubernetes/04.컨테이너 운영 무작정 따라하기/Kubernetes-basic/container-orchestration/yaml_azure/ingress/web-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: web-ingress
  namespace: ingress-basic
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: blue.example.com
    http:
      paths:
      - backend:
          serviceName: nginx-blue-svc
          servicePort: 80
  - host: green.example.com
    http:
      paths:
      - backend:
          serviceName: nginx-green-svc
          servicePort: 80
